--- a/te/clue4.html
+++ b/te/clue4.html
@@ -126,8 +126,10 @@
     var mytube = 'he';
     var qid = 4;
     localStorage.setItem("planet-score4", '0');
+    var lng = 'te';
     $(function() {
         planet.readData();
+        planet.addQuestion('ఘనీభవించిన వాయువులతో చేయబడిన ఈ గ్రహాన్ని చూడటానికి, మీకు టెలిస్కోప్ కావాలి.హీలియం (He)సేకరించడానికి ఈ గ్రహాన్ని సందర్శించండి.');
         $('.submit-btn').click(function() {
             myTable = '';
             myTable = myTable + '<table width="100%" border="0" cellspacing="0" cellpadding="0" class="answerTable c-blue">';
@@ -153,7 +155,7 @@
                     $('.popup-small-head').html('అది సరియైనది కాదు. ');
                     $('.popup-small-content').html('<p>ఇక్కడ ఇంకొక ఆధారం ఉన్నది.<br>ఈ చల్లని నీలి గ్రహం సౌర కుటుంబంలో అత్యంత బలమైన గాలులను కలిగి ఉన్నది. మళ్లీ ప్రయత్నించండి.</p><p class="c-white">కొనసాగడానికి X క్లిక్ చేయండి.</p>');
                     $('.feedback-popup-small').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('బాగా చేసారు! ');
                     myhtml = '<p>సూర్యుడి నుండి ఎనిమిదవ గ్రహం నెప్ట్యూన్. ఈ నీలి గ్రహం ఒక టెలిస్కోప్ ద్వారా మాత్రమే కనిపిస్తుంది. ఇది రెండవ అత్యంత చల్లని గ్రహం, కానీ  ఏదైనా ఇతర గ్రహం కన్నా బలమైన గాలులు కలిగి ఉన్నది. </p>';
@@ -161,7 +163,7 @@
                     myhtml = myhtml + '<p class="c-white">కొనసాగడానికి X క్లిక్ చేయండి.</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             } else {
                 if (curPlanet != answer) {
@@ -171,7 +173,7 @@
                     myhtml = myhtml + '<p class="c-white">కొనసాగడానికి X క్లిక్ చేయండి.</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('బాగా చేసారు! ');
                     myhtml = '<p>సూర్యుడి నుండి ఎనిమిదవ గ్రహం నెప్ట్యూన్. ఈ నీలి గ్రహం ఒక టెలిస్కోప్ ద్వారా మాత్రమే కనిపిస్తుంది. ఇది రెండవ అత్యంత చల్లని గ్రహం, కానీ  ఏదైనా ఇతర గ్రహం కన్నా బలమైన గాలులు కలిగి ఉన్నది. </p>';
@@ -179,13 +181,16 @@
                     myhtml = myhtml + '<p class="c-white">కొనసాగడానికి X క్లిక్ చేయండి.</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             }
             playattempt++;
         });
         $('.next-btn').click(function() {
             if ($(this).css('opacity') == 1) {
+                myData.appData.attempt[qid - 1].clue_endTime = timeStamp();
+                myData.appData.attempt[qid - 1].createdAt = timeStamp();
+                planet.save();
                 window.open('clue5.html', '_self');
             }
         });
