--- a/te/result.html
+++ b/te/result.html
@@ -80,8 +80,12 @@
         show10 = parseInt(localStorage.getItem("planet-score10"));
 
         showScore = show1 + show2 + show3 + show4 + show5 + show6 + show7 + show8 + show9 + show10;
-        planet.end();
-        planet.updateScore(showScore);
+        if (showScore >= 0 && showScore <= 9) {
+            planet.end('0' + showScore);
+        } else {
+            planet.end(showScore);
+        }
+        planet.updateScore();
 
 
         if (showScore >= 10) {
