--- a/en/clue7.html
+++ b/en/clue7.html
@@ -196,7 +196,7 @@
         });
     });
 
-    function getScore() {
+    function updateScore() {
         localStorage.setItem("planet-score7", '1');
         $('.capAnim').addClass('cap-fix');
         $('#tube-' + mytube).attr('src', 'common/TUBES/' + mytube + '.png');
