--- a/en/clue3.html
+++ b/en/clue3.html
@@ -197,7 +197,7 @@
         });
     });
 
-    function getScore() {
+    function updateScore() {
         localStorage.setItem("planet-score3", '1');
         $('.capAnim').addClass('cap-fix');
         $('#tube-' + mytube).attr('src', 'common/TUBES/' + mytube + '.png');
