--- a/hi/clue3.html
+++ b/hi/clue3.html
@@ -120,8 +120,8 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/others.js"></script>
-<script src="../scripts/planet.js"></script>
-<script src="../scripts/cookie.js"></script>
+<script src="js/planet.js"></script>
+<script src="js/cookie.js"></script>
 <script>
     var answer = 'Jupiter';
     var mytube = 'h';
