--- a/te/result.html
+++ b/te/result.html
@@ -1,4 +1,9 @@
-<!doctype html>
+<script src="js/planet.js"></script>
+<script src="js/cookie.js"></script><script src="js/planet.js"></script>
+<script src="js/cookie.js"></script><script src="js/planet.js"></script>
+<script src="js/cookie.js"></script><script src="js/planet.js"></script>
+<script src="js/cookie.js"></script><script src="js/planet.js"></script>
+<script src="js/cookie.js"></script><!doctype html>
 <html>
 
 <head>
