--- a/te/clue1.html
+++ b/te/clue1.html
@@ -119,8 +119,8 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/others.js"></script>
-<script src="../scripts/planet.js"></script>
-<script src="../scripts/cookie.js"></script>
+<script src="js/planet.js"></script>
+<script src="js/cookie.js"></script>
 <script>
     var answer = 'Earth';
     var mytube = 'n';
